@@ -1,7 +1,7 @@
 {
   "name": "@massimo-cassandro/autocomplete",
   "description": "Implementation of `@tarekraafat/autocomplete.js` to manage key-value items",
-  "version": "1.4.4",
+  "version": "1.5.0",
   "license": "MIT",
   "author": "Massimo Cassandro",
   "main": "index.js",
